fixed label and text alignment under hidden columns

--- a/webapp/src/components/kanban/kanban.scss
+++ b/webapp/src/components/kanban/kanban.scss
@@ -86,9 +86,18 @@
     .octo-board-hidden-item {
         display: flex;
         flex-direction: row;
+        margin-bottom: 5px;
 
         > div {
             margin-right: 5px;
+        }
+
+        .Label {
+            height: 100%;
+        }
+
+        > .Button {
+            height: 100%;
         }
     }
 }
